# CMake-AWS-Project

./: CMakeLists.txt  README.md
CMake AWS Project/: CMake AWS Project.cpp  CMake AWS Project.h  CMakeLists.txt
