# CMakeList.txt : CMake project for CMake AWS Project, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "CMake AWS Project.cpp" "CMake AWS Project.h")

# TODO: Add tests and install targets if needed.
